[package]
name = "memapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = {version= "1.0.138", features=["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
parking_lot = "0.12.1"